WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90147
m_cssVariablesEnabled member is not initialized in Page Settings
https://bugs.webkit.org/show_bug.cgi?id=90147
Summary
m_cssVariablesEnabled member is not initialized in Page Settings
Chris Dumez
Reported
2012-06-28 01:42:21 PDT
The m_cssVariablesEnabled class member in Page Settings is not initialized in the class constructor. This needs to be fixed.
Attachments
Patch
(1.27 KB, patch)
2012-06-28 01:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-06-28 01:43:58 PDT
Created
attachment 149904
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2012-06-28 08:30:04 PDT
For realz? Shame on me.
WebKit Review Bot
Comment 3
2012-06-28 08:33:28 PDT
Comment on
attachment 149904
[details]
Patch Clearing flags on attachment: 149904 Committed
r121432
: <
http://trac.webkit.org/changeset/121432
>
WebKit Review Bot
Comment 4
2012-06-28 08:33:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug