m_cssVariablesEnabled member is not initialized in Page Settings https://bugs.webkit.org/show_bug.cgi?id=90147

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-28
Reviewed by Simon Hausmann.

Properly initialize the m_cssVariablesEnabled member in Page
Settings.

No new tests, no behavior change.

* page/Settings.cpp:
(WebCore::Settings::Settings):

Canonical link: https://commits.webkit.org/108000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121432 268f45cc-cd09-0410-ab3c-d52691b4dbfc